fixing layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -82,12 +82,6 @@ p{
 }
 @media screen and (min-width: 1024px){
 
-    .hero-heading{
-        font-size: 26vh;
-    }
-    .hero-heading-one{
-        font-size: 26vh;
-    }
     h1{
         font-size: 9rem;
     }
@@ -228,6 +222,7 @@ p{
     .hero-heading-one{
         font-size: 24vh;
     }
+    
     .hero{
     background: var(--color-secondary);
     height: 85vh;
@@ -240,8 +235,8 @@ p{
     }
 
     .hero-title{
-    grid-column: 1 / span 2;
-    text-align: center;
+        grid-column: 1 / span 2;
+        text-align: center;
     }
 
     .hero_bottom-left{
@@ -268,6 +263,20 @@ p{
     }
 
 }
+
+@media screen and (min-width: 1020px) and (max-width: 1100px){
+    .hero-heading,
+    .hero-heading-one{
+        font-size: 20vh; /* smaller so it fits */
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 1020px){
+    .hero-heading,
+    .hero-heading-one{
+        font-size: 15vh; /* smaller so it fits */
+    }
+}
+
 
 
 .item{
